--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
           </nav>
         </div>
           <div class="contacts">
-            <a href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-            <a href="tel:+48111111111"><span>+48 111 111 111</span></a>
+            <div class="contacts-box">
+            <a class="contacts-link" href="mailto:info@devstudio.com">
+              <svg class="contacts-icon-mail">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg><span>info@devstudio.com</span></a>
+            <a  class="contacts-link" href="tel:+48111111111"><svg class="contacts-icon-tel">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg><span>+48 111 111 111</span></a>
           </div>
         </div>
         </section>
@@ -52,22 +58,42 @@
           <div class="container">
           <ul class="article-list">
             <li>
+              <div class="article-box">
+              <svg class="article-icons">
+                <use href="./images/icons.svg#icon-antenna-1"></use>
+              </svg>
+              </div>  
               <h3>LOREM IPSUM</h3>
               <p class="article-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
             <li>
+              <div class="article-box">
+              <svg class="article-icons">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+            </svg>
+          </div>
               <h3>LOREM IPSUM</h3>
               <p class="article-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
             </li>
             <li>
+              <div class="article-box">
+              <svg class="article-icons">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
+            </svg>
+          </div>
               <h3>LOREM IPSUM</h3>
               <p class="article-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
             <li>
+              <div class="article-box">
+              <svg class="article-icons">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
+            </svg>
+          </div>
               <h3>LOREM IPSUM</h3>
               <p class="article-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -120,6 +146,28 @@
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
               <div class="team-job">Product Designer</div>
+              <ul>
+                <li>
+              <svg>
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+            </ul>
             </figcaption>
           </figure>
           <figure class="team-card">
@@ -132,6 +180,28 @@
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
               <div class="team-job">Frontend Developer</div>
+              <ul>
+                <li>
+              <svg>
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+            </ul>
             </figcaption>
           </figure>
           <figure class="team-card">
@@ -144,6 +214,28 @@
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
               <div class="team-job">Marketing</div>
+              <ul>
+                <li>
+              <svg>
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+            </ul>
             </figcaption>
           </figure>
           <figure class="team-card">
@@ -156,8 +248,67 @@
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
               <div class="team-job">Marketing</div>
+              <ul>
+                <li>
+              <svg>
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+            </ul>
             </figcaption>
           </figure>
+        </div>
+        </section>
+        <section class="section-top">
+          <div class="container">
+          <h2 class="section-header">Nasi klienci</h2>
+          <ul class="clients-list">
+           <li>
+            <svg>
+              <use href="./images/icons.svg#icon-Logo1"></use>
+            </svg>
+           </li>
+           <li>
+            <svg>
+              <use href="./images/icons.svg#icon-Logo2"></use>
+            </svg>
+           </li>
+           <li>
+            <svg>
+              <use href="./images/icons.svg#icon-Logo3"></use>
+            </svg>
+          </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-Logo4"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-Logo5"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use href="./images/icons.svg#icon-Logo6"></use>
+              </svg>
+            </li>
+          </ul>
         </div>
         </section>
     </main>
@@ -173,6 +324,31 @@
           </div>
           <div class="contacts bottom-tel">
           <a href="tel:+48111111111">+48 111 111 111</a>
+          </div>
+          <div>
+            <h4>DOŁĄCZ DO NAS</h4>
+            <ul>
+              <li>
+            <svg>
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </li>
+          <li>
+            <svg>
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </li>
+          <li>
+            <svg>
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </li>
+          <li>
+            <svg>
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </li>
+          </ul>
           </div>
         </div>
       </section>
