--- a/index.html
+++ b/index.html
@@ -146,26 +146,34 @@
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
               <div class="team-job">Product Designer</div>
-              <ul>
+              <ul class="social-links">
                 <li>
-              <svg>
+                  <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
+            </div>
             </li>
             </ul>
             </figcaption>
@@ -180,26 +188,34 @@
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
               <div class="team-job">Frontend Developer</div>
-              <ul>
+              <ul class="social-links">
                 <li>
-              <svg>
+                  <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
+            </div>
             </li>
             </ul>
             </figcaption>
@@ -214,26 +230,34 @@
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
               <div class="team-job">Marketing</div>
-              <ul>
+              <ul class="social-links">
                 <li>
-              <svg>
+                  <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
+            </div>
             </li>
             </ul>
             </figcaption>
@@ -248,66 +272,86 @@
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
               <div class="team-job">Marketing</div>
-              <ul>
+              <ul class="social-links">
                 <li>
-              <svg>
+                  <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
+            </div>
             </li>
             <li>
-              <svg>
+              <div class="social-border">
+              <svg class="social-icons">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
+            </div>
             </li>
             </ul>
             </figcaption>
           </figure>
         </div>
         </section>
-        <section class="section-top">
+        <section class="section-top section-bottom">
           <div class="container">
           <h2 class="section-header">Nasi klienci</h2>
           <ul class="clients-list">
            <li>
-            <svg>
+            <div class="clients-box">
+            <svg class="clients-icon">
               <use href="./images/icons.svg#icon-Logo1"></use>
             </svg>
+            </div>  
            </li>
            <li>
-            <svg>
+            <div class="clients-box">
+            <svg class="clients-icon">
               <use href="./images/icons.svg#icon-Logo2"></use>
             </svg>
+            </div>  
            </li>
            <li>
-            <svg>
+            <div class="clients-box">
+            <svg class="clients-icon">
               <use href="./images/icons.svg#icon-Logo3"></use>
             </svg>
-          </li>
-            <li>
-              <svg>
-                <use href="./images/icons.svg#icon-Logo4"></use>
-              </svg>
-            </li>
-            <li>
-              <svg>
-                <use href="./images/icons.svg#icon-Logo5"></use>
-              </svg>
-            </li>
-            <li>
-              <svg>
-                <use href="./images/icons.svg#icon-Logo6"></use>
-              </svg>
-            </li>
+            </div>  
+           </li>
+           <li>
+            <div class="clients-box">
+            <svg class="clients-icon">
+              <use href="./images/icons.svg#icon-Logo4"></use>
+            </svg>
+            </div>  
+           </li>
+           <li>
+            <div class="clients-box">
+            <svg class="clients-icon">
+              <use href="./images/icons.svg#icon-Logo5"></use>
+            </svg>
+            </div>  
+           </li>
+           <li>
+            <div class="clients-box">
+            <svg class="clients-icon">
+              <use href="./images/icons.svg#icon-Logo6"></use>
+            </svg>
+            </div>  
+           </li>
           </ul>
         </div>
         </section>
@@ -325,28 +369,36 @@
           <div class="contacts bottom-tel">
           <a href="tel:+48111111111">+48 111 111 111</a>
           </div>
-          <div>
-            <h4>DOŁĄCZ DO NAS</h4>
-            <ul>
+          <div class="footer-join-us">
+            <h4 class="footer-text">DOŁĄCZ DO NAS</h4>
+            <ul class="social-links">
               <li>
-            <svg>
+                <div class="social-border footer-links">
+            <svg class="social-icons footer-icons">
               <use href="./images/icons.svg#icon-instagram-2"></use>
             </svg>
+          </div>
           </li>
           <li>
-            <svg>
+            <div class="social-border footer-links">
+            <svg class="social-icons footer-icons">
               <use href="./images/icons.svg#icon-twitter-1"></use>
             </svg>
+          </div>
           </li>
           <li>
-            <svg>
+            <div class="social-border footer-links">
+            <svg class="social-icons footer-icons">
               <use href="./images/icons.svg#icon-facebook-1"></use>
             </svg>
+          </div>
           </li>
           <li>
-            <svg>
+            <div class="social-border footer-links">
+            <svg class="social-icons footer-icons">
               <use href="./images/icons.svg#icon-linkedin-1"></use>
             </svg>
+          </div>
           </li>
           </ul>
           </div>
