--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
     <footer>
       <section class="bottom">
         <div class="container">
+          <div class="footer-contacts">
         <div class="logo footer-padding">
           <a href="#">Web<span class="logo-footer">Studio</span></a>
         </div>
@@ -369,6 +370,7 @@
           <div class="contacts bottom-tel">
           <a href="tel:+48111111111">+48 111 111 111</a>
           </div>
+        </div>
           <div class="footer-join-us">
             <h4 class="footer-text">DOŁĄCZ DO NAS</h4>
             <ul class="social-links">
