--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
             <div class="contacts-box">
               <a class="contacts-link" href="mailto:info@devstudio.com">
                 <svg class="contacts-icon-mail">
-                  <use href="./images/icons.svg#icon-envelope"></use></svg>
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
                 >info@devstudio.com
               </a>
               <a class="contacts-link" href="tel:+48111111111">
                 <svg class="contacts-icon-tel">
-                  <use href="./images/icons.svg#icon-smartphone"></use></svg>
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
                 >+48 111 111 111
               </a>
             </div>
