--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,13 @@
                 <svg class="contacts-icon-mail">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
-                >info@devstudio.com
+                info@devstudio.com
               </a>
               <a class="contacts-link" href="tel:+48111111111">
                 <svg class="contacts-icon-tel">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
-                >+48 111 111 111
+                +48 111 111 111
               </a>
             </div>
           </div>
