--- a/index.html
+++ b/index.html
@@ -161,31 +161,39 @@
               <div class="team-job">Product Designer</div>
               <ul class="social-links">
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
               </ul>
@@ -203,31 +211,39 @@
               <div class="team-job">Frontend Developer</div>
               <ul class="social-links">
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
               </ul>
@@ -245,31 +261,39 @@
               <div class="team-job">Marketing</div>
               <ul class="social-links">
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
               </ul>
@@ -284,34 +308,42 @@
             />
             <figcaption class="caption">
               <div class="team-name">John Doe</div>
-              <div class="team-job">Marketing</div>
+              <div class="team-job">UI Designer</div>
               <ul class="social-links">
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
                 <li>
-                  <div class="social-border">
-                    <svg class="social-icons">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                  <div class="social-links-flex">
+                    <a href="#" class="social-border">
+                      <svg class="social-icons">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </div>
                 </li>
               </ul>
@@ -325,44 +357,56 @@
           <ul class="clients-list">
             <li>
               <div class="clients-box">
-                <svg class="clients-icon">
-                  <use href="./images/icons.svg#icon-Logo1"></use>
-                </svg>
+                <a class="clients-border" href="#">
+                  <svg class="clients-icon">
+                    <use href="./images/icons.svg#icon-Logo1"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li>
               <div class="clients-box">
-                <svg class="clients-icon">
-                  <use href="./images/icons.svg#icon-Logo2"></use>
-                </svg>
+                <a class="clients-border" href="#">
+                  <svg class="clients-icon">
+                    <use href="./images/icons.svg#icon-Logo2"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li>
               <div class="clients-box">
-                <svg class="clients-icon">
-                  <use href="./images/icons.svg#icon-Logo3"></use>
-                </svg>
+                <a class="clients-border" href="#">
+                  <svg class="clients-icon">
+                    <use href="./images/icons.svg#icon-Logo3"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li>
               <div class="clients-box">
-                <svg class="clients-icon">
-                  <use href="./images/icons.svg#icon-Logo4"></use>
-                </svg>
+                <a class="clients-border" href="#">
+                  <svg class="clients-icon">
+                    <use href="./images/icons.svg#icon-Logo4"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li>
               <div class="clients-box">
-                <svg class="clients-icon">
-                  <use href="./images/icons.svg#icon-Logo5"></use>
-                </svg>
+                <a class="clients-border" href="#">
+                  <svg class="clients-icon">
+                    <use href="./images/icons.svg#icon-Logo5"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li>
               <div class="clients-box">
-                <svg class="clients-icon">
-                  <use href="./images/icons.svg#icon-Logo6"></use>
-                </svg>
+                <a class="clients-border" href="#">
+                  <svg class="clients-icon">
+                    <use href="./images/icons.svg#icon-Logo6"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
@@ -388,31 +432,39 @@
             <h4 class="footer-text">DOŁĄCZ DO NAS</h4>
             <ul class="social-links">
               <li>
-                <div class="social-border footer-links">
-                  <svg class="social-icons footer-icons">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
+                <div class="social-links-flex">
+                  <a href="#" class="social-border footer-links">
+                    <svg class="social-icons">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
                 </div>
               </li>
               <li>
-                <div class="social-border footer-links">
-                  <svg class="social-icons footer-icons">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
+                <div class="social-links-flex">
+                  <a href="#" class="social-border footer-links">
+                    <svg class="social-icons">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
                 </div>
               </li>
               <li>
-                <div class="social-border footer-links">
-                  <svg class="social-icons footer-icons">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
+                <div class="social-links-flex">
+                  <a href="#" class="social-border footer-links">
+                    <svg class="social-icons">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
                 </div>
               </li>
               <li>
-                <div class="social-border footer-links">
-                  <svg class="social-icons footer-icons">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
+                <div class="social-links-flex">
+                  <a href="#" class="social-border footer-links">
+                    <svg class="social-icons">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
                 </div>
               </li>
             </ul>
