--- a/portfolio.html
+++ b/portfolio.html
@@ -221,31 +221,39 @@
             <h4 class="footer-text">DOŁĄCZ DO NAS</h4>
             <ul class="social-links">
               <li>
-                <div class="social-border footer-links">
-                  <svg class="social-icons footer-icons">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
+                <div class="social-links-flex">
+                  <a href="#" class="social-border footer-links">
+                    <svg class="social-icons">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
                 </div>
               </li>
               <li>
-                <div class="social-border footer-links">
-                  <svg class="social-icons footer-icons">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
+                <div class="social-links-flex">
+                  <a href="#" class="social-border footer-links">
+                    <svg class="social-icons">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
                 </div>
               </li>
               <li>
-                <div class="social-border footer-links">
-                  <svg class="social-icons footer-icons">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
+                <div class="social-links-flex">
+                  <a href="#" class="social-border footer-links">
+                    <svg class="social-icons">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
                 </div>
               </li>
               <li>
-                <div class="social-border footer-links">
-                  <svg class="social-icons footer-icons">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
+                <div class="social-links-flex">
+                  <a href="#" class="social-border footer-links">
+                    <svg class="social-icons">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
                 </div>
               </li>
             </ul>
