--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     </main>
     <footer>
       <section class="bottom">
-        <div class="container">
+        <div class="container footer-flex">
           <div class="footer-contacts">
             <div class="logo footer-padding">
               <a href="#">Web<span class="logo-footer">Studio</span></a>
